[package]
name = "cap_flag"
version = "0.1.0"
authors = ["Tim Sims <thetimsims@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = "0.13.0"
log = { version = "0.4.8", features = ["serde"] }
rand = "*"
ron = "*"
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
